[gd_scene load_steps=2 format=3 uid="uid://bdwx5j6vf5k8o"]

[ext_resource type="Script" path="res://src/Scripts/LifecycleTestRunner.gd" id="1_8j4nf"]

[node name="LifecycleTestRunner" type="Node3D"]
script = ExtResource("1_8j4nf")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="UI/MainContainer"]
layout_mode = 2
text = "Object Lifecycle Management Test Suite"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/MainContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="UI/MainContainer"]
layout_mode = 2

[node name="RunAllTests" type="Button" parent="UI/MainContainer/ButtonContainer"]
layout_mode = 2
text = "Run All Tests"
size_flags_horizontal = 3

[node name="RunUnitTests" type="Button" parent="UI/MainContainer/ButtonContainer"]
layout_mode = 2
text = "Run Unit Tests"
size_flags_horizontal = 3

[node name="RunStressTests" type="Button" parent="UI/MainContainer/ButtonContainer"]
layout_mode = 2
text = "Run Stress Tests"
size_flags_horizontal = 3

[node name="ClearResults" type="Button" parent="UI/MainContainer/ButtonContainer"]
layout_mode = 2
text = "Clear"
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="UI/MainContainer"]
layout_mode = 2

[node name="ResultsContainer" type="ScrollContainer" parent="UI/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsLabel" type="Label" parent="UI/MainContainer/ResultsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Test results will appear here..."
autowrap_mode = 3
vertical_alignment = 1

[connection signal="pressed" from="UI/MainContainer/ButtonContainer/RunAllTests" to="." method="_on_run_all_tests_pressed"]
[connection signal="pressed" from="UI/MainContainer/ButtonContainer/RunUnitTests" to="." method="_on_run_unit_tests_pressed"]
[connection signal="pressed" from="UI/MainContainer/ButtonContainer/RunStressTests" to="." method="_on_run_stress_tests_pressed"]
[connection signal="pressed" from="UI/MainContainer/ButtonContainer/ClearResults" to="." method="_on_clear_results_pressed"]